omni/tests/goldens/types/undefined_ident_20.err
tests/goldens/types/undefined_ident_20.omni:1:20: error: undefined identifier "missing20"
  let result20:int = missing20
                     ^~~ hint: declare the name before using it
