omni/tests/goldens/types/undefined_ident_20.omni
let result20:int = missing20
